--- a/frontend/index.html
+++ b/frontend/index.html
@@ -82,17 +82,32 @@
       const table = document.querySelector('#booksTable tbody');
       table.innerHTML = '';
       books.forEach(book => {
-        const row = document.createElement('tr');
-        row.innerHTML = `
-          <td>${book.title}</td>
-          <td>${book.author || ''}</td>
-          <td>${book.owned ? '✅' : ''}</td>
-          <td>${book.read ? '✅' : ''}</td>
-          <td>${book.tbr ? '✅' : ''}</td>
-        `;
-        table.appendChild(row);
-      });
+      const row = document.createElement('tr');
+      row.innerHTML = `
+        <td>${book.title}</td>
+        <td>${book.author || ''}</td>
+        <td>${book.owned ? '✅' : ''}</td>
+        <td>${book.read ? '✅' : ''}</td>
+        <td>${book.tbr ? '✅' : ''}</td>
+        <td>
+          <button class="btn btn-sm btn-danger" onclick="deleteBook('${book._id}')">Delete</button>
+        </td>
+      `;
+      table.appendChild(row);
+    });
     }
+
+    // Delete a book
+    async function deleteBook(id) {
+      if (!confirm('Are you sure you want to delete this book?')) return;
+
+      await fetch(`${API_BASE}/${id}`, {
+        method: 'DELETE'
+      });
+
+      loadBooks();
+    }
+
 
     loadBooks();
   </script>
