--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,13 +5,12 @@
   <title>Book Tracker Admin</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body class="p-5 bg-light">
-
-  <div class="container">
+<body class="py-5 bg-light">
+  <div class="container-lg">
     <h1 class="mb-4">📚 Book Tracker Admin</h1>
 
     <form id="bookForm" class="card p-4 mb-4 shadow-sm bg-white">
-      <h4>Add a Book</h4>
+      <h4 id="formTitle">Add a Book</h4>
       <div class="mb-3">
         <label for="title" class="form-label">Title</label>
         <input type="text" id="title" class="form-control" required>
@@ -35,8 +34,25 @@
       <button type="submit" class="btn btn-primary">Add Book</button>
     </form>
 
-    <h4>All Books</h4>
-    <table class="table table-bordered bg-white shadow-sm" id="booksTable">
+    <!-- Filters and Search -->
+    <div class="d-flex flex-wrap align-items-center justify-content-between mb-3">
+      <div class="btn-group mb-2" role="group">
+        <button class="btn btn-outline-primary" onclick="setFilter('all')">All</button>
+        <button class="btn btn-outline-primary" onclick="setFilter('tbr')">TBR</button>
+        <button class="btn btn-outline-primary" onclick="setFilter('read')">Read</button>
+        <button class="btn btn-outline-primary" onclick="setFilter('owned')">Owned</button>
+      </div>
+      <div class="d-flex mb-2">
+        <input id="searchInput" class="form-control me-2" type="text" placeholder="Search by title or author" oninput="loadBooks()">
+        <button class="btn btn-outline-secondary" onclick="toggleView()">Toggle View</button>
+      </div>
+    </div>
+
+    <!-- Card View -->
+    <div id="booksGrid" class="row g-4"></div>
+
+    <!-- Table View (hidden by default) -->
+    <table class="table table-bordered bg-white shadow-sm" id="booksTable" style="display: none;">
       <thead>
         <tr>
           <th>Title</th>
@@ -44,6 +60,7 @@
           <th>Owned</th>
           <th>Read</th>
           <th>TBR</th>
+          <th>Actions</th>
         </tr>
       </thead>
       <tbody></tbody>
@@ -52,11 +69,15 @@
 
   <script>
     const API_BASE = "http://localhost:5000/api/books";
+    let isEditing = false;
+    let editId = null;
+    let viewMode = 'cards';
+    let currentFilter = 'all';
 
-    // Submit form
     document.getElementById('bookForm').addEventListener('submit', async (e) => {
       e.preventDefault();
-      const newBook = {
+
+      const bookData = {
         title: document.getElementById('title').value,
         author: document.getElementById('author').value,
         owned: document.getElementById('owned').checked,
@@ -64,50 +85,131 @@
         tbr: document.getElementById('tbr').checked
       };
 
-      await fetch(API_BASE, {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify(newBook)
-      });
+      if (isEditing) {
+        await fetch(`${API_BASE}/${editId}`, {
+          method: 'PUT',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify(bookData)
+        });
+        isEditing = false;
+        editId = null;
+        document.querySelector('#bookForm button[type="submit"]').textContent = 'Add Book';
+        document.getElementById('formTitle').textContent = 'Add a Book';
+      } else {
+        await fetch(API_BASE, {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify(bookData)
+        });
+      }
 
       e.target.reset();
       loadBooks();
     });
 
-    // Load books into the table
     async function loadBooks() {
       const res = await fetch(API_BASE);
-      const books = await res.json();
+      let books = await res.json();
 
-      const table = document.querySelector('#booksTable tbody');
-      table.innerHTML = '';
-      books.forEach(book => {
-      const row = document.createElement('tr');
-      row.innerHTML = `
-        <td>${book.title}</td>
-        <td>${book.author || ''}</td>
-        <td>${book.owned ? '✅' : ''}</td>
-        <td>${book.read ? '✅' : ''}</td>
-        <td>${book.tbr ? '✅' : ''}</td>
-        <td>
-          <button class="btn btn-sm btn-danger" onclick="deleteBook('${book._id}')">Delete</button>
-        </td>
-      `;
-      table.appendChild(row);
-    });
-    }
+      const search = document.getElementById('searchInput')?.value.toLowerCase() || '';
 
-    // Delete a book
-    async function deleteBook(id) {
-      if (!confirm('Are you sure you want to delete this book?')) return;
-
-      await fetch(`${API_BASE}/${id}`, {
-        method: 'DELETE'
+      books = books.filter(book => {
+        const matchesSearch = book.title.toLowerCase().includes(search) || (book.author?.toLowerCase().includes(search));
+        const matchesFilter = (
+          currentFilter === 'all' ||
+          (currentFilter === 'tbr' && book.tbr) ||
+          (currentFilter === 'read' && book.read) ||
+          (currentFilter === 'owned' && book.owned)
+        );
+        return matchesSearch && matchesFilter;
       });
 
+      const containerCards = document.getElementById('booksGrid');
+      const containerTable = document.getElementById('booksTable');
+      if (containerCards) containerCards.innerHTML = '';
+      if (containerTable) containerTable.querySelector('tbody').innerHTML = '';
+
+      books.forEach(book => {
+        if (viewMode === 'cards') {
+          const col = document.createElement('div');
+          col.className = 'col-md-4';
+
+          col.innerHTML = `
+            <div class="card h-100 shadow-sm">
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">${book.title}</h5>
+                <h6 class="card-subtitle mb-2 text-muted">${book.author || ''}</h6>
+                <p class="mb-3">
+                  ${book.owned ? '📚 Owned<br>' : ''}
+                  ${book.read ? '✅ Read<br>' : ''}
+                  ${book.tbr ? '📖 To Be Read<br>' : ''}
+                </p>
+                <div class="mt-auto">
+                  <button class="btn btn-sm btn-secondary me-2">✏️ Edit</button>
+                  <button class="btn btn-sm btn-danger">🗑️ Delete</button>
+                </div>
+              </div>
+            </div>
+          `;
+
+          col.querySelector('.btn-secondary').addEventListener('click', () => editBook(book._id));
+          col.querySelector('.btn-danger').addEventListener('click', () => deleteBook(book._id));
+          containerCards.appendChild(col);
+        } else {
+          const row = document.createElement('tr');
+          row.innerHTML = `
+            <td>${book.title}</td>
+            <td>${book.author || ''}</td>
+            <td>${book.owned ? '✅' : ''}</td>
+            <td>${book.read ? '✅' : ''}</td>
+            <td>${book.tbr ? '✅' : ''}</td>
+            <td>
+              <button class="btn btn-sm btn-secondary me-2">✏️ Edit</button>
+              <button class="btn btn-sm btn-danger">🗑️ Delete</button>
+            </td>
+          `;
+          row.querySelector('.btn-secondary').addEventListener('click', () => editBook(book._id));
+          row.querySelector('.btn-danger').addEventListener('click', () => deleteBook(book._id));
+          containerTable.querySelector('tbody').appendChild(row);
+        }
+      });
+
+      document.getElementById('booksGrid').style.display = viewMode === 'cards' ? 'flex' : 'none';
+      document.getElementById('booksTable').style.display = viewMode === 'table' ? 'table' : 'none';
+    }
+
+    function toggleView() {
+      viewMode = viewMode === 'cards' ? 'table' : 'cards';
       loadBooks();
     }
 
+    function setFilter(filter) {
+      currentFilter = filter;
+      loadBooks();
+    }
+
+    async function deleteBook(id) {
+      if (!confirm('Are you sure you want to delete this book?')) return;
+      await fetch(`${API_BASE}/${id}`, { method: 'DELETE' });
+      loadBooks();
+    }
+
+    async function editBook(id) {
+      const res = await fetch(`${API_BASE}/${id}`);
+      const book = await res.json();
+
+      document.getElementById('title').value = book.title || '';
+      document.getElementById('author').value = book.author || '';
+      document.getElementById('owned').checked = book.owned || false;
+      document.getElementById('read').checked = book.read || false;
+      document.getElementById('tbr').checked = book.tbr || false;
+
+      isEditing = true;
+      editId = id;
+
+      document.querySelector('#bookForm button[type="submit"]').textContent = 'Update Book';
+      document.getElementById('formTitle').textContent = 'Edit Book';
+    }
 
     loadBooks();
   </script>
