--- a/backend/public/quests.html
+++ b/backend/public/quests.html
@@ -1,2 +1,49 @@
-<h1>Quests</h1>
-<p>I built this to track books I own, want to read, and love to revisit. Stay tuned!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Book Tracker</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
+  <div class="container">
+    <a class="navbar-brand" href="/">📚 Book Tracker</a>
+    <div class="ms-auto d-flex align-items-center">
+      <ul class="navbar-nav me-3">
+        <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="/about.html">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="/tbr.html">Current TBR</a></li>
+        <li class="nav-item"><a class="nav-link" href="/quests.html">Reading Quests</a></li>
+      </ul>
+      <a id="authLink" class="btn btn-outline-primary btn-sm" href="/login.html">Login</a>
+    </div>
+  </div>
+</nav>
+
+  <div class="container mt-5">
+		<h1>Quests</h1>
+		<p>I built this to track books I own, want to read, and love to revisit. Stay tuned!</p>
+  </div>
+  <script>
+  // Check login status
+  fetch('/api/check-auth')
+    .then(res => res.status === 200)
+    .then(isLoggedIn => {
+      const authLink = document.getElementById('authLink');
+      if (isLoggedIn) {
+        authLink.textContent = 'Logout';
+        authLink.href = '/logout';
+        authLink.classList.remove('btn-outline-primary');
+        authLink.classList.add('btn-danger');
+      }
+    });
+</script>
+</body>
+</html>
+
+
+
+
+
+
