--- a/backend/public/admin.html
+++ b/backend/public/admin.html
@@ -23,32 +23,47 @@
 
   <div class="container mt-5">
     <h2>📚 Admin Dashboard</h2>
-    <form id="bookForm" class="card p-4 mb-4 shadow-sm">
-      <input type="hidden" id="bookId" />
-      <div class="mb-3"><input type="text" id="title" class="form-control" placeholder="Title" required /></div>
-      <div class="mb-3"><input type="text" id="author" class="form-control" placeholder="Author" /></div>
-      <div class="form-check form-check-inline">
-        <input type="checkbox" id="owned" class="form-check-input" />
-        <label for="owned" class="form-check-label">Owned</label>
-      </div>
-      <div class="form-check form-check-inline">
-        <input type="checkbox" id="read" class="form-check-input" />
-        <label for="read" class="form-check-label">Read</label>
-      </div>
-      <div class="form-check form-check-inline">
-        <input type="checkbox" id="tbr" class="form-check-input" />
-        <label for="tbr" class="form-check-label">TBR</label>
-      </div>
-      <div class="mt-3">
-        <button type="submit" class="btn btn-primary">Save Book</button>
-      </div>
-    </form>
 
-    <div id="bookList" class="row"></div>
+    <!-- Hidden until login is verified -->
+    <div id="adminControls" style="display: none;">
+      <form id="bookForm" class="card p-4 mb-4 shadow-sm">
+        <input type="hidden" id="bookId" />
+        <div class="mb-3"><input type="text" id="title" class="form-control" placeholder="Title" required /></div>
+        <div class="mb-3"><input type="text" id="author" class="form-control" placeholder="Author" /></div>
+        <div class="form-check form-check-inline">
+          <input type="checkbox" id="owned" class="form-check-input" />
+          <label for="owned" class="form-check-label">Owned</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input type="checkbox" id="read" class="form-check-input" />
+          <label for="read" class="form-check-label">Read</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input type="checkbox" id="tbr" class="form-check-input" />
+          <label for="tbr" class="form-check-label">TBR</label>
+        </div>
+        <div class="mt-3">
+          <button type="submit" class="btn btn-primary">Save Book</button>
+        </div>
+      </form>
+
+      <div id="bookList" class="row"></div>
+    </div>
   </div>
 
   <script>
-    const API_BASE = '/api/books';
+    const API_BASE = "/api/books";
+
+    // Redirect if not logged in, otherwise show admin UI
+    fetch('/api/check-auth')
+      .then(res => {
+        if (res.status !== 200) {
+          window.location.href = '/login.html';
+        } else {
+          document.getElementById('adminControls').style.display = 'block';
+          loadBooks();
+        }
+      });
 
     async function loadBooks() {
       const res = await fetch(API_BASE);
@@ -107,8 +122,6 @@
       document.getElementById('bookForm').reset();
       loadBooks();
     });
-
-    loadBooks();
   </script>
 </body>
 </html>
