--- a/backend/public/admin.html
+++ b/backend/public/admin.html
@@ -42,6 +42,22 @@
           <input type="checkbox" id="tbr" class="form-check-input" />
           <label for="tbr" class="form-check-label">TBR</label>
         </div>
+
+        <div class="mb-3">
+          <label for="review" class="form-label">Review</label>
+          <textarea id="review" class="form-control" placeholder="Write a short review..."></textarea>
+        </div>
+
+        <div class="mb-3">
+          <label for="wordCount" class="form-label">Word Count</label>
+          <input type="number" id="wordCount" class="form-control" />
+        </div>
+
+        <div class="mb-3">
+          <label for="dateRead" class="form-label">Date Read</label>
+          <input type="date" id="dateRead" class="form-control" />
+        </div>
+
         <div class="mt-3">
           <button type="submit" class="btn btn-primary">Save Book</button>
         </div>
@@ -78,6 +94,9 @@
             <h5>${book.title}</h5>
             <p>${book.author || ''}</p>
             <p>${book.owned ? '📚 Owned' : ''} ${book.read ? '✅ Read' : ''} ${book.tbr ? '📝 TBR' : ''}</p>
+            ${book.review ? `<p><strong>Review:</strong> ${book.review}</p>` : ''}
+            ${book.wordCount ? `<p><strong>Word Count:</strong> ${book.wordCount.toLocaleString()}</p>` : ''}
+            ${book.dateRead ? `<p><strong>Date Read:</strong> ${book.dateRead}</p>` : ''}
             <button class="btn btn-sm btn-warning" onclick='editBook(${JSON.stringify(book)})'>Edit</button>
             <button class="btn btn-sm btn-danger" onclick='deleteBook("${book.id}")'>Delete</button>
           </div>
@@ -98,6 +117,9 @@
       document.getElementById('owned').checked = book.owned;
       document.getElementById('read').checked = book.read;
       document.getElementById('tbr').checked = book.tbr;
+      document.getElementById('review').value = book.review || '';
+      document.getElementById('wordCount').value = book.wordCount || '';
+      document.getElementById('dateRead').value = book.dateRead || '';
     }
 
     document.getElementById('bookForm').addEventListener('submit', async (e) => {
@@ -108,7 +130,10 @@
         author: document.getElementById('author').value,
         owned: document.getElementById('owned').checked,
         read: document.getElementById('read').checked,
-        tbr: document.getElementById('tbr').checked
+        tbr: document.getElementById('tbr').checked,
+        review: document.getElementById('review').value,
+        wordCount: parseInt(document.getElementById('wordCount').value) || null,
+        dateRead: document.getElementById('dateRead').value || null
       };
       const method = id ? 'PUT' : 'POST';
       const url = id ? `${API_BASE}/${id}` : API_BASE;
